compiler/eight-hir/tests/snapshots/inference_tests__chaining_infers_unit.snap
---
source: compiler/eight-hir/tests/inference_tests.rs
expression: doc
snapshot_kind: text
---
module {
  // module intrinsic scalar types
  
  
  // module intrinsic functions
  
  
  // module types
  
  
  // module traits
  
  
  // module instances
  
  
  // module functions
  fn test() -> unit {
    let x: i32 = (0 as i32);
    ((x as i32) = (1 as i32) as unit);
  }
}
