compiler/eight-hir/tests/snapshots/inference_tests__constant_record_access.snap
---
source: compiler/eight-hir/tests/inference_tests.rs
expression: doc
snapshot_kind: text
---
hir_module {
  declares {
    // module types
    
    
    // module record types
    type Agent = {
      name: i32,
    }
    
    // module functions
    fn test(agent: Agent) -> unit;
    
    // module traits
    
    
    // module instances
  
  }
  
  defining {
    // module functions
    fn test<>(agent: Agent) -> unit {
      let z: i32 = ((agent as Agent).name as i32);
    }
    // module intrinsic functions
    
  
  }
}
