compiler/eight-hir/tests/snapshots/inference_tests__generic_fn_ref.snap
---
source: compiler/eight-hir/tests/inference_tests.rs
expression: doc
snapshot_kind: text
---
module {
  // module intrinsic scalar types
  
  
  // module intrinsic functions
  intrinsic_fn id<T>(x: T) -> T;
  
  // module types
  
  
  // module traits
  
  
  // module instances
  
  
  // module functions
  fn test() -> unit {
    let z: bool = ((id as fn((bool))->bool)::<>((true as bool)) as bool);
    let k: i32 = ((id as fn((i32))->i32)::<>((123 as i32)) as i32);
  }
}
