compiler/eight-hir/tests/snapshots/inference_tests__offset_index_yields_inner.snap
---
source: compiler/eight-hir/tests/inference_tests.rs
expression: doc
snapshot_kind: text
---
module {
  // module intrinsic scalar types
  
  
  // module intrinsic functions
  
  
  // module types
  
  
  // module functions
  fn test(v: *i32) -> unit {
    let k: i32 = ((v as *i32)[(0 as i32)] as i32);
    let q: i32 = ((v as *i32)[(k as i32)] as i32);
  }
}
