compiler/eight-hir/tests/snapshots/inference_tests__pointer_deref.snap
---
source: compiler/eight-hir/tests/inference_tests.rs
expression: doc
snapshot_kind: text
---
hir_module {
  declares {
    // module scalar types
    
    
    // module record types
    
    
    // module functions
    fn address_of(a: i32) -> unit;
    fn deref(a: i32, b: **i32) -> unit;
    
    // module traits
    
    
    // module instances
  
  }
  
  defining {
    // module functions
    fn address_of<>(i32) -> unit {
      let k: *i32 = (&(1 as i32) as *i32);
    }
    fn deref<>(i32, **i32) -> unit {
      let m: i32 = (*(*(b as **i32) as *i32) as i32);
    }
    // module intrinsic functions
    
  
  }
}
