compiler/eight-hir/tests/snapshots/inference_tests__uninitialized_inference.snap
---
source: compiler/eight-hir/tests/inference_tests.rs
expression: doc
snapshot_kind: text
---
hir_module {
  declares {
    // module scalar types
    
    
    // module record types
    
    
    // module functions
    fn foo(x: i32) -> i32;
    
    // module traits
    
    
    // module instances
  
  }
  
  defining {
    // module functions
    fn foo<>(i32) -> i32 {
      let k: i32 = (((123 as i32)) as i32);
    }
    // module intrinsic functions
    
  
  }
}
